--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,11 +3,9 @@ project(TestParser)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_subdirectory(ext/mgclient)
-
 add_executable(TestParser src/main.cpp)
 
 target_link_libraries(TestParser
         PUBLIC
-        mgclient-static
+        mgclient
         )
