--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,14 +2,18 @@ cmake_minimum_required(VERSION 3.25)
 project(MemQB)
 
 set(CMAKE_CXX_STANDARD 17)
+set(BUILD_CPP_BINDINGS ON)
+
+add_subdirectory(ext/json)
+add_subdirectory(ext/mgclient)
 
 add_library(
         MemQB
         src/services/GraphDB.cpp
-)
+        src/MemQB.cpp)
 
 target_include_directories(
-        MemBQ
+        MemQB
         PUBLIC
         src/include
 )
@@ -17,5 +21,6 @@ target_include_directories(
 target_link_libraries(
         MemQB
         PUBLIC
-        mgclient
+        mgclient_cpp
+        nlohmann_json
 )
